--- a/manual.html
+++ b/manual.html
@@ -27,8 +27,8 @@
             </div>
             <div class="nav-links-main">
                 <ul class="nav-links">
-                    <li><a href="./" class="nav-link active">Home</a></li>
-                    <li><a href="./manual.html" class="nav-link">Manual</a></li>
+                    <li><a href="./" class="nav-link">Home</a></li>
+                    <li><a href="./manual.html" class="nav-link active">Manual</a></li>
                     <li><a href="./java.html" class="nav-link">Java</a></li>
                     <li><a href="./selenium.html" class="nav-link">Selenium</a></li>
                     <li><a href="./testng.html" class="nav-link">TestNG</a></li>
@@ -54,7 +54,7 @@
             <div class="menu-links-main">
                 <ul class="menu-nav-links">
                     <li><a href="./" class="nav-link active">Home</a></li>
-                    <li><a href="./" class="nav-link ">What is Software?</a></li>
+                    <li><a href="./" class="nav-link">What is Software?</a></li>
                     <li><a href="./" class="nav-link">What is Software testing?</a></li>
                     <li><a href="./" class="nav-link">What is Quality?</a></li>
                     <li><a href="./" class="nav-link">STLC</a></li>
@@ -112,8 +112,8 @@
         <div class="sidebar-content"> 
             <div class="sidebar-links-main">
                 <ul class="sidebar-links">
-                    <li><a href="./" class="nav-link active">Home</a></li>
-                    <li><a href="./manual.html" class="nav-link">Manual</a></li>
+                    <li><a href="./" class="nav-link">Home</a></li>
+                    <li><a href="./manual.html" class="nav-link active">Manual</a></li>
                     <li><a href="./java.html" class="nav-link">Java</a></li>
                     <li><a href="./selenium.html" class="nav-link">Selenium</a></li>
                     <li><a href="./testng.html" class="nav-link">TestNG</a></li>
@@ -128,8 +128,8 @@
         <div class="footer-center wrapper">
             <div class="footer links-main">
                <ul class="footer-links">
-                    <li><a href="./" class="footer-link active">home</a></li>
-                    <li><a href="./manual.html" class="footer-link">manual</a></li>
+                    <li><a href="./" class="footer-link">home</a></li>
+                    <li><a href="./manual.html" class="footer-link active">manual</a></li>
                     <li><a href="./java.html" class="footer-link">java</a></li>
                     <li><a href="./selenium.html" class="footer-link">selenium</a></li>
                     <li><a href="./testng.html" class="footer-link">testNG</a></li>
@@ -137,8 +137,8 @@
                </ul>
             </div>
                <div class="footer-copy-right">
-                <p>copyright 2021
-                    <span class="copyright-date"> 2022</span> made by 
+                <p>copyright 2022
+                    <span class="copyright-date"> 2023</span> made by 
                     Suresh Babu Mandapati
                 </p>
             </div>
