--- a/selenium.html
+++ b/selenium.html
@@ -27,12 +27,12 @@
             </div>
             <div class="nav-links-main">
                 <ul class="nav-links">
-                    <li><a href="./" class="nav-link active">Home</a></li>
+                    <li><a href="./" class="nav-link">Home</a></li>
                     <li><a href="./manual.html" class="nav-link">Manual</a></li>
-                    <li><a href="./" class="nav-link">Java</a></li>
-                    <li><a href="./" class="nav-link">Selenium</a></li>
-                    <li><a href="./" class="nav-link">TestNG</a></li>
-                    <li><a href="./" class="nav-link">Q&A</a></li>
+                    <li><a href="./java.html" class="nav-link">Java</a></li>
+                    <li><a href="./selenium.html" class="nav-link active">Selenium</a></li>
+                    <li><a href="./testng.html" class="nav-link">TestNG</a></li>
+                    <li><a href="./qa.html" class="nav-link">Q&A</a></li>
                 </ul>
             </div>
         </div>
@@ -112,10 +112,10 @@
         <div class="sidebar-content"> 
             <div class="sidebar-links-main">
                 <ul class="sidebar-links">
-                    <li><a href="./" class="nav-link active">Home</a></li>
+                    <li><a href="./" class="nav-link">Home</a></li>
                     <li><a href="./manual.html" class="nav-link">Manual</a></li>
                     <li><a href="./java.html" class="nav-link">Java</a></li>
-                    <li><a href="./selenium.html" class="nav-link">Selenium</a></li>
+                    <li><a href="./selenium.html" class="nav-link active">Selenium</a></li>
                     <li><a href="./testng.html" class="nav-link">TestNG</a></li>
                     <li><a href="./testng.html" class="nav-link">Q&A</a></li>
                 </ul>
@@ -128,17 +128,17 @@
         <div class="footer-center wrapper">
             <div class="footer links-main">
                <ul class="footer-links">
-                    <li><a href="./" class="footer-link active">home</a></li>
+                    <li><a href="./" class="footer-link">home</a></li>
                     <li><a href="./manual.html" class="footer-link">manual</a></li>
                     <li><a href="./java.html" class="footer-link">java</a></li>
-                    <li><a href="./selenium.html" class="footer-link">selenium</a></li>
+                    <li><a href="./selenium.html" class="footer-link active">selenium</a></li>
                     <li><a href="./testng.html" class="footer-link">testNG</a></li>
                     <li><a href="./qa.html" class="footer-link">Q&A</a></li>
                </ul>
             </div>
                <div class="footer-copy-right">
-                <p>copyright 2021
-                    <span class="copyright-date"> 2022</span> made by 
+                <p>copyright 2022
+                    <span class="copyright-date"> 2023</span> made by 
                     Suresh Babu Mandapati
                 </p>
             </div>
