--- a/manual.html
+++ b/manual.html
@@ -60,6 +60,24 @@
                     <li><a href="./" class="nav-link">STLC</a></li>
                     <li><a href="./" class="nav-link">SDLC</a></li>
                     <li><a href="./" class="nav-link">Waterfall Model</a></li>
+                    <li><a href="./" class="nav-link">What is Software?</a></li>
+                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
+                    <li><a href="./" class="nav-link">What is Quality?</a></li>
+                    <li><a href="./" class="nav-link">STLC</a></li>
+                    <li><a href="./" class="nav-link">SDLC</a></li>
+                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
+                    <li><a href="./" class="nav-link">What is Software?</a></li>
+                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
+                    <li><a href="./" class="nav-link">What is Quality?</a></li>
+                    <li><a href="./" class="nav-link">STLC</a></li>
+                    <li><a href="./" class="nav-link">SDLC</a></li>
+                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
+                    <li><a href="./" class="nav-link">What is Software?</a></li>
+                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
+                    <li><a href="./" class="nav-link">What is Quality?</a></li>
+                    <li><a href="./" class="nav-link">STLC</a></li>
+                    <li><a href="./" class="nav-link">SDLC</a></li>
+                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
                 </ul>
             </div>
             <div class="menu content">
@@ -91,6 +109,24 @@
                         <li><a href="" class="nav-link">STLC</a></li>
                         <li><a href="" class="nav-link">SDLC</a></li>
                         <li><a href="" class="nav-link">Waterfall Model</a></li>
+                        <li><a href="./" class="nav-link">What is Software?</a></li>
+                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
+                    <li><a href="./" class="nav-link">What is Quality?</a></li>
+                    <li><a href="./" class="nav-link">STLC</a></li>
+                    <li><a href="./" class="nav-link">SDLC</a></li>
+                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
+                    <li><a href="./" class="nav-link">What is Software?</a></li>
+                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
+                    <li><a href="./" class="nav-link">What is Quality?</a></li>
+                    <li><a href="./" class="nav-link">STLC</a></li>
+                    <li><a href="./" class="nav-link">SDLC</a></li>
+                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
+                    <li><a href="./" class="nav-link">What is Software?</a></li>
+                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
+                    <li><a href="./" class="nav-link">What is Quality?</a></li>
+                    <li><a href="./" class="nav-link">STLC</a></li>
+                    <li><a href="./" class="nav-link">SDLC</a></li>
+                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
                     </ul>
                 </div>
             </div>
