--- a/manual/whatsoft.html
+++ b/manual/whatsoft.html
@@ -85,11 +85,11 @@
                     <p>Software is a collection of programs that helps us to perform a task.</p>
                     <h4>Types of Softwares</h4>
                     <h5>1. System Software</h5>
-                    <p>Ex. Operating Systems, Utlities, System Softwares</p>
+                    <p>Ex. Operating Systems, Utlities, System Softwares.</p>
                     <h5>2. Programming Software</h5>
-                    <p>Ex. Interpreters, Compilers, Debuggers</p>
+                    <p>Ex. Interpreters, Compilers, Debuggers.</p>
                     <h5>3. Application Software</h5>
-                    <p>Ex. Web Applications, Mobile Apps, Desktop Applications</p>
+                    <p>Ex. Web Applications, Mobile Apps, Desktop Applications.</p>
             </div>
            </div> 
             
