--- a/manual.html
+++ b/manual.html
@@ -55,7 +55,7 @@
                     <ul class="menu-nav-links">
                         <li><a href="./manual.html" class="nav-link  active">Home</a></li>
                         <li><a href="./manual/whatsoft.html" class="nav-link">What is Software?</a></li>
-                        <li><a href="./" class="nav-link">What is Software testing?</a></li>
+                        <li><a href="./manual/whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="./" class="nav-link">What is Quality?</a></li>
                         <li><a href="./" class="nav-link">STLC</a></li>
                         <li><a href="./" class="nav-link">SDLC</a></li>
@@ -80,9 +80,9 @@
                         <li><a href="./" class="nav-link">Waterfall Model</a></li>
                     </ul>
                 </div>
-                <div class="menu content">
-                       
-                </div>
+                <!-- <div class="right-image">
+                            <img src="./Images/Mannual-Testing.jpg" alt="">                
+                </div> -->
             </div>
             
         </div>
@@ -106,7 +106,7 @@
                     <ul class="menu-links">
                         <li><a href="" class="nav-link active">Home</a></li> 
                         <li><a href="./manual/whatsoft.html" class="nav-link">What is Software?</a></li>
-                        <li><a href="" class="nav-link">What is Software testing?</a></li>
+                        <li><a href="./manual/whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="" class="nav-link">What is Quality?</a></li>
                         <li><a href="" class="nav-link">STLC</a></li>
                         <li><a href="" class="nav-link">SDLC</a></li>
@@ -161,6 +161,9 @@
         </div>
     </aside>    
     <!-- Sidebar Section Ends -->
+    <div class="middle-image">
+        <img src="./Images/Mannual-Testing.jpg" alt="">
+    </div>
     <!-- Footer Seciton Starts -->
     <footer class="footer-container">
         <div class="footer-center wrapper">
