--- a/manual/whattest.html
+++ b/manual/whattest.html
@@ -47,15 +47,15 @@
                     <img src="../Images/bars.svg" alt=""> 
                 </div>
                 <div class="title">
-                    <h1>Manual Testing - What is Software?</h1>
+                    <h1>Manual Testing - What is Software Testing?</h1>
                 </div>
             </div>
            <div class="menu-two-parts">
             <div class="menu-links-main">
                 <ul class="menu-nav-links">
                     <li><a href="../manual.html" class="nav-link">Home</a></li>
-                    <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
-                    <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
+                    <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
+                    <li><a href="./whattest.html" class="nav-link active">What is Software testing?</a></li>
                     <li><a href="./" class="nav-link">What is Quality?</a></li>
                     <li><a href="./" class="nav-link">STLC</a></li>
                     <li><a href="./" class="nav-link">SDLC</a></li>
@@ -81,18 +81,14 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>What is Software?</h2>
-                    <p>Software is a collection of programs that helps us to perform a task.</p>
-                    <h4>Types of Softwares</h4>
-                    <h5>1. System Software</h5>
-                    <p>Ex. Operating Systems, Utlities, System Softwares.</p>
-                    <h5>2. Programming Software</h5>
-                    <p>Ex. Interpreters, Compilers, Debuggers.</p>
-                    <h5>3. Application Software</h5>
-                    <p>Ex. Web Applications, Mobile Apps, Desktop Applications.</p>
+                    <h2>What is Software Testing?</h2>
+                    <p>1. Software Testing is the part of Software Development process..</p>
+                    <p>2. Software Testing is an activity to detecting the defects.</p>
+                    <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
+                    <p>4. To ensure the client about the completeness and correctness of the software application.</p>
                     <div class="arrows">
-                        <div><a href="../manual.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href="./whattest.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
@@ -118,8 +114,8 @@
                 <div class="menu-links-main">
                     <ul class="menu-links">
                         <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
-                        <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
+                        <li><a href="./whattest.html" class="nav-link active">What is Software testing?</a></li>
                         <li><a href="" class="nav-link">What is Quality?</a></li>
                         <li><a href="" class="nav-link">STLC</a></li>
                         <li><a href="" class="nav-link">SDLC</a></li>
