--- a/java.html
+++ b/java.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./CSS/navbar.css">
     <link rel="stylesheet" href="./CSS/sidebar.css">
     <link rel="stylesheet" href="./CSS/footer.css">
-    <link rel="stylesheet" href="./CSS/manual/manual.css">
+    <link rel="stylesheet" href="./CSS/manual.css">
     <title>Software Testing | Core Java</title>
 </head>
 <body>
