--- a/manual.html
+++ b/manual.html
@@ -56,28 +56,52 @@
                         <li><a href="./manual.html" class="nav-link  active">Home</a></li>
                         <li><a href="./manual/whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./manual/whattest.html" class="nav-link">What is Software testing?</a></li>
-                        <li><a href="./" class="nav-link">What is Quality?</a></li>
-                        <li><a href="./" class="nav-link">STLC</a></li>
+                        <li><a href="./" class="nav-link">Necessity of Software Testing?</a></li>
+                        <li><a href="./" class="nav-link">Objectives/Motive of Software Testing</a></li>
+                        <li><a href="./" class="nav-link">Software Quality</a></li>
+                        <li><a href="./" class="nav-link">Project Vs Product</a></li>
+                        <li><a href="./" class="nav-link">Error, Defect/Bug, Failure</a></li>
+                        <li><a href="./" class="nav-link">Why the Software has bugs?</a></li>
                         <li><a href="./" class="nav-link">SDLC</a></li>
                         <li><a href="./" class="nav-link">Waterfall Model</a></li>
-                        <li><a href="./" class="nav-link">What is Software?</a></li>
-                        <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                        <li><a href="./" class="nav-link">What is Quality?</a></li>
+                        <li><a href="./" class="nav-link">V Model</a></li>
+                        <li><a href="./" class="nav-link">Verification Vs Validation</a></li>
+                        <li><a href="./" class="nav-link">Testing Methodologies</a></li>
+                        <li><a href="./" class="nav-link">Static Testing Vs Dynamic Testing</a></li>
+                        <li><a href="./" class="nav-link">Quality Assurance and Quality Control</a></li>
+                        <li><a href="./" class="nav-link">Verification/Static Testing Techniques</a></li>
+                        <li><a href="./" class="nav-link">Levels of Testing</a></li>
+                        <li><a href="./" class="nav-link">System Testing Techniques/Types</a></li>
+                        <li><a href="./" class="nav-link">Functional Vs Non Functional Testing</a></li>
+                        <li><a href="./" class="nav-link">Smoke Testing Vs Sanity Testing</a></li>
+                        <li><a href="./" class="nav-link">Retesting</a></li>
+                        <li><a href="./" class="nav-link">Regression Testing</a></li>
+                        <li><a href="./" class="nav-link">Retesting Vs Regression Testing</a></li>
+                        <li><a href="./" class="nav-link">Exploratory Testing</a></li>
+                        <li><a href="./" class="nav-link">Buddy,Pair,Adhoc Testing</a></li>
+                        <li><a href="./" class="nav-link">Monky/Gorilla Testing</a></li>
+                        <li><a href="./" class="nav-link">Adhoc Vs Monky Vs Exploratory Testing</a></li>
+                        <li><a href="./" class="nav-link">Positive and Negative Testing</a></li>
+                        <li><a href="./" class="nav-link">Positive and Negative Testcases for Pen</a></li>
+                        <li><a href="./" class="nav-link">End to End Testing</a></li>
+                        <li><a href="./" class="nav-link">Globalization and Localization Testing</a></li>
+                        <li><a href="./" class="nav-link">Test Design Techniques</a></li>
                         <li><a href="./" class="nav-link">STLC</a></li>
-                        <li><a href="./" class="nav-link">SDLC</a></li>
-                        <li><a href="./" class="nav-link">Waterfall Model</a></li>
-                        <li><a href="./" class="nav-link">What is Software?</a></li>
-                        <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                        <li><a href="./" class="nav-link">What is Quality?</a></li>
-                        <li><a href="./" class="nav-link">STLC</a></li>
-                        <li><a href="./" class="nav-link">SDLC</a></li>
-                        <li><a href="./" class="nav-link">Waterfall Model</a></li>
-                        <li><a href="./" class="nav-link">What is Software?</a></li>
-                        <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                        <li><a href="./" class="nav-link">What is Quality?</a></li>
-                        <li><a href="./" class="nav-link">STLC</a></li>
-                        <li><a href="./" class="nav-link">SDLC</a></li>
-                        <li><a href="./" class="nav-link">Waterfall Model</a></li>
+                        <li><a href="./" class="nav-link">Requirement Tracebility Matrix(RTM)</a></li>
+                        <li><a href="./" class="nav-link">Test Environment</a></li>
+                        <li><a href="./" class="nav-link">Test Execution</a></li>
+                        <li><a href="./" class="nav-link">Defects/Bugs</a></li>
+                        <li><a href="./" class="nav-link">Defects Catergorization</a></li>
+                        <li><a href="./" class="nav-link">High and low Severity, Priority defects</a></li>
+                        <li><a href="./" class="nav-link">Defect Resolution</a></li>
+                        <li><a href="./" class="nav-link">Bug Life Cycle </a></li>
+                        <li><a href="./" class="nav-link">QA/Testing Activities</a></li>
+                        <li><a href="./" class="nav-link">7 Principles of Software Testing</a></li>
+                        <li><a href="./" class="nav-link">Agile Model</a></li>
+                        <li><a href="./" class="nav-link">Scrum</a></li>
+                        <li><a href="./" class="nav-link">Scrum Terminology</a></li>
+                        <li><a href="./" class="nav-link">Scrum Board</a></li>
+                        <li><a href="./" class="nav-link">DoR and DoD</a></li>
                     </ul>
                 </div>
                 <!-- <div class="right-image">
@@ -107,28 +131,52 @@
                         <li><a href="" class="nav-link active">Home</a></li> 
                         <li><a href="./manual/whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./manual/whattest.html" class="nav-link">What is Software testing?</a></li>
-                        <li><a href="" class="nav-link">What is Quality?</a></li>
-                        <li><a href="" class="nav-link">STLC</a></li>
-                        <li><a href="" class="nav-link">SDLC</a></li>
-                        <li><a href="" class="nav-link">Waterfall Model</a></li>
-                        <li><a href="./" class="nav-link">What is Software?</a></li>
-                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                    <li><a href="./" class="nav-link">What is Quality?</a></li>
-                    <li><a href="./" class="nav-link">STLC</a></li>
-                    <li><a href="./" class="nav-link">SDLC</a></li>
-                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
-                    <li><a href="./" class="nav-link">What is Software?</a></li>
-                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                    <li><a href="./" class="nav-link">What is Quality?</a></li>
-                    <li><a href="./" class="nav-link">STLC</a></li>
-                    <li><a href="./" class="nav-link">SDLC</a></li>
-                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
-                    <li><a href="./" class="nav-link">What is Software?</a></li>
-                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                    <li><a href="./" class="nav-link">What is Quality?</a></li>
-                    <li><a href="./" class="nav-link">STLC</a></li>
-                    <li><a href="./" class="nav-link">SDLC</a></li>
-                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
+                        <li><a href="./" class="nav-link">Necessity of Software Testing?</a></li>
+                        <li><a href="./" class="nav-link">Objectives/Motive of Software Testing</a></li>
+                        <li><a href="./" class="nav-link">Software Quality</a></li>
+                        <li><a href="./" class="nav-link">Project Vs Product</a></li>
+                        <li><a href="./" class="nav-link">Error, Defect/Bug, Failure</a></li>
+                        <li><a href="./" class="nav-link">Why the Software has bugs?</a></li>
+                        <li><a href="./" class="nav-link">SDLC</a></li>
+                        <li><a href="./" class="nav-link">Waterfall Model</a></li>
+                        <li><a href="./" class="nav-link">V Model</a></li>
+                        <li><a href="./" class="nav-link">Verification Vs Validation</a></li>
+                        <li><a href="./" class="nav-link">Testing Methodologies</a></li>
+                        <li><a href="./" class="nav-link">Static Testing Vs Dynamic Testing</a></li>
+                        <li><a href="./" class="nav-link">Quality Assurance and Quality Control</a></li>
+                        <li><a href="./" class="nav-link">Verification/Static Testing Techniques</a></li>
+                        <li><a href="./" class="nav-link">Levels of Testing</a></li>
+                        <li><a href="./" class="nav-link">System Testing Techniques/Types</a></li>
+                        <li><a href="./" class="nav-link">Functional Vs Non Functional Testing</a></li>
+                        <li><a href="./" class="nav-link">Smoke Testing Vs Sanity Testing</a></li>
+                        <li><a href="./" class="nav-link">Retesting</a></li>
+                        <li><a href="./" class="nav-link">Regression Testing</a></li>
+                        <li><a href="./" class="nav-link">Retesting Vs Regression Testing</a></li>
+                        <li><a href="./" class="nav-link">Exploratory Testing</a></li>
+                        <li><a href="./" class="nav-link">Buddy,Pair,Adhoc Testing</a></li>
+                        <li><a href="./" class="nav-link">Monky/Gorilla Testing</a></li>
+                        <li><a href="./" class="nav-link">Adhoc Vs Monky Vs Exploratory Testing</a></li>
+                        <li><a href="./" class="nav-link">Positive and Negative Testing</a></li>
+                        <li><a href="./" class="nav-link">Positive and Negative Testcases for Pen</a></li>
+                        <li><a href="./" class="nav-link">End to End Testing</a></li>
+                        <li><a href="./" class="nav-link">Globalization and Localization Testing</a></li>
+                        <li><a href="./" class="nav-link">Test Design Techniques</a></li>
+                        <li><a href="./" class="nav-link">STLC</a></li>
+                        <li><a href="./" class="nav-link">Requirement Tracebility Matrix(RTM)</a></li>
+                        <li><a href="./" class="nav-link">Test Environment</a></li>
+                        <li><a href="./" class="nav-link">Test Execution</a></li>
+                        <li><a href="./" class="nav-link">Defects/Bugs</a></li>
+                        <li><a href="./" class="nav-link">Defects Catergorization</a></li>
+                        <li><a href="./" class="nav-link">High and low Severity, Priority defects</a></li>
+                        <li><a href="./" class="nav-link">Defect Resolution</a></li>
+                        <li><a href="./" class="nav-link">Bug Life Cycle </a></li>
+                        <li><a href="./" class="nav-link">QA/Testing Activities</a></li>
+                        <li><a href="./" class="nav-link">7 Principles of Software Testing</a></li>
+                        <li><a href="./" class="nav-link">Agile Model</a></li>
+                        <li><a href="./" class="nav-link">Scrum</a></li>
+                        <li><a href="./" class="nav-link">Scrum Terminology</a></li>
+                        <li><a href="./" class="nav-link">Scrum Board</a></li>
+                        <li><a href="./" class="nav-link">DoR and DoD</a></li>
                     </ul>
                 </div>
             </div>
