--- a/manual/necessity.html
+++ b/manual/necessity.html
@@ -105,7 +105,7 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>What is Software Testing?</h2>
+                    <h2>Necessity of Software Testing</h2>
                     <p>1. Software Testing is the part of Software Development process..</p>
                     <p>2. Software Testing is an activity to detecting the defects.</p>
                     <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
