--- a/manual/whatsoft.html
+++ b/manual/whatsoft.html
@@ -53,31 +53,55 @@
            <div class="menu-two-parts">
             <div class="menu-links-main">
                 <ul class="menu-nav-links">
-                    <li><a href="../manual.html" class="nav-link">Home</a></li>
-                    <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
-                    <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
-                    <li><a href="./" class="nav-link">What is Quality?</a></li>
-                    <li><a href="./" class="nav-link">STLC</a></li>
-                    <li><a href="./" class="nav-link">SDLC</a></li>
-                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
-                    <li><a href="./" class="nav-link">What is Software?</a></li>
-                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                    <li><a href="./" class="nav-link">What is Quality?</a></li>
-                    <li><a href="./" class="nav-link">STLC</a></li>
-                    <li><a href="./" class="nav-link">SDLC</a></li>
-                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
-                    <li><a href="./" class="nav-link">What is Software?</a></li>
-                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                    <li><a href="./" class="nav-link">What is Quality?</a></li>
-                    <li><a href="./" class="nav-link">STLC</a></li>
-                    <li><a href="./" class="nav-link">SDLC</a></li>
-                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
-                    <li><a href="./" class="nav-link">What is Software?</a></li>
-                    <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                    <li><a href="./" class="nav-link">What is Quality?</a></li>
-                    <li><a href="./" class="nav-link">STLC</a></li>
-                    <li><a href="./" class="nav-link">SDLC</a></li>
-                    <li><a href="./" class="nav-link">Waterfall Model</a></li>
+                    <li><a href="../manual.html" class="nav-link ">Home</a></li> 
+                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
+                        <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
+                        <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
+                        <li><a href="./quality.html" class="nav-link">Software Quality</a></li>
+                        <li><a href="./projvsprod.html" class="nav-link">Project Vs Product</a></li>
+                        <li><a href="./errfailure.html" class="nav-link">Error, Defect/Bug, Failure</a></li>
+                        <li><a href="./whybugs.html" class="nav-link">Why the Software has bugs?</a></li>
+                        <li><a href="./sdlc.html" class="nav-link">SDLC</a></li>
+                        <li><a href="./waterfall.html" class="nav-link">Waterfall Model</a></li>
+                        <li><a href="./vmodel.html" class="nav-link">V Model</a></li>
+                        <li><a href="./vervsval.html" class="nav-link">Verification Vs Validation</a></li>
+                        <li><a href="./testmeth.html" class="nav-link">Testing Methodologies</a></li>
+                        <li><a href="./staticvsdynamic.html" class="nav-link">Static Testing Vs Dynamic Testing</a></li>
+                        <li><a href="./qavsqc.html" class="nav-link">Quality Assurance and Quality Control</a></li>
+                        <li><a href="./verificationtech.html" class="nav-link">Verification/Static Testing Techniques</a></li>
+                        <li><a href="./levelsoftest.html" class="nav-link">Levels of Testing</a></li>
+                        <li><a href="./systemtesttech.html" class="nav-link">System Testing Techniques/Types</a></li>
+                        <li><a href="./funcvsnonfunc.html" class="nav-link">Functional Vs Non Functional Testing</a></li>
+                        <li><a href="./smokevssanity.html" class="nav-link">Smoke Testing Vs Sanity Testing</a></li>
+                        <li><a href="./retest.html" class="nav-link">Retesting</a></li>
+                        <li><a href="./regression.html" class="nav-link">Regression Testing</a></li>
+                        <li><a href="./retestvsregression.html" class="nav-link">Retesting Vs Regression Testing</a></li>
+                        <li><a href="./exploratory.html" class="nav-link">Exploratory Testing</a></li>
+                        <li><a href="./buddypairadhoc.html" class="nav-link">Buddy,Pair,Adhoc Testing</a></li>
+                        <li><a href="./monkey.html" class="nav-link">Monky/Gorilla Testing</a></li>
+                        <li><a href="./avsmvsex.html" class="nav-link">Adhoc Vs Monky Vs Exploratory Testing</a></li>
+                        <li><a href="./positivevsnegative.html" class="nav-link">Positive and Negative Testing</a></li>
+                        <li><a href="./testcasesforpen.html" class="nav-link">Positive and Negative Testcases for Pen</a></li>
+                        <li><a href="./endtoend.html" class="nav-link">End to End Testing</a></li>
+                        <li><a href="./globalandlocal.html" class="nav-link">Globalization and Localization Testing</a></li>
+                        <li><a href="./testdesigntechnques.html" class="nav-link">Test Design Techniques</a></li>
+                        <li><a href="./stlc.html" class="nav-link">STLC</a></li>
+                        <li><a href="./rtm.html" class="nav-link">Requirement Tracebility Matrix(RTM)</a></li>
+                        <li><a href="./testenv.html" class="nav-link">Test Environment</a></li>
+                        <li><a href="./testexe.html" class="nav-link">Test Execution</a></li>
+                        <li><a href="./defectsbugs.html" class="nav-link">Defects/Bugs</a></li>
+                        <li><a href="./defectcat.html" class="nav-link">Defects Catergorization</a></li>
+                        <li><a href="./highsevandlowsev.html" class="nav-link">High and low Severity, Priority defects</a></li>
+                        <li><a href="./defectresolution.html" class="nav-link">Defect Resolution</a></li>
+                        <li><a href="./buglifecycle.html" class="nav-link">Bug Life Cycle </a></li>
+                        <li><a href="./qaactivities.html" class="nav-link">QA/Testing Activities</a></li>
+                        <li><a href="./7principles.html" class="nav-link">7 Principles of Software Testing</a></li>
+                        <li><a href="./agilemodel.html" class="nav-link">Agile Model</a></li>
+                        <li><a href="./scrum.html" class="nav-link">Scrum</a></li>
+                        <li><a href="./scrumterminology.html" class="nav-link">Scrum Terminology</a></li>
+                        <li><a href="./scrumboard.html" class="nav-link">Scrum Board</a></li>
+                        <li><a href="./dordod.html" class="nav-link">DoR and DoD</a></li>
                 </ul>
             </div>
             <div class="menucontent">
@@ -120,28 +144,52 @@
                         <li><a href="../manual.html" class="nav-link ">Home</a></li> 
                         <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
-                        <li><a href="" class="nav-link">What is Quality?</a></li>
-                        <li><a href="" class="nav-link">STLC</a></li>
-                        <li><a href="" class="nav-link">SDLC</a></li>
-                        <li><a href="" class="nav-link">Waterfall Model</a></li>
-                        <li><a href="./" class="nav-link">What is Software?</a></li>
-                        <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                        <li><a href="./" class="nav-link">What is Quality?</a></li>
-                        <li><a href="./" class="nav-link">STLC</a></li>
-                        <li><a href="./" class="nav-link">SDLC</a></li>
-                        <li><a href="./" class="nav-link">Waterfall Model</a></li>
-                        <li><a href="./" class="nav-link">What is Software?</a></li>
-                        <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                        <li><a href="./" class="nav-link">What is Quality?</a></li>
-                        <li><a href="./" class="nav-link">STLC</a></li>
-                        <li><a href="./" class="nav-link">SDLC</a></li>
-                        <li><a href="./" class="nav-link">Waterfall Model</a></li>
-                        <li><a href="./" class="nav-link">What is Software?</a></li>
-                        <li><a href="./" class="nav-link">What is Software testing?</a></li>
-                        <li><a href="./" class="nav-link">What is Quality?</a></li>
-                        <li><a href="./" class="nav-link">STLC</a></li>
-                        <li><a href="./" class="nav-link">SDLC</a></li>
-                        <li><a href="./" class="nav-link">Waterfall Model</a></li>
+                        <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
+                        <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
+                        <li><a href="./quality.html" class="nav-link">Software Quality</a></li>
+                        <li><a href="./projvsprod.html" class="nav-link">Project Vs Product</a></li>
+                        <li><a href="./errfailure.html" class="nav-link">Error, Defect/Bug, Failure</a></li>
+                        <li><a href="./whybugs.html" class="nav-link">Why the Software has bugs?</a></li>
+                        <li><a href="./sdlc.html" class="nav-link">SDLC</a></li>
+                        <li><a href="./waterfall.html" class="nav-link">Waterfall Model</a></li>
+                        <li><a href="./vmodel.html" class="nav-link">V Model</a></li>
+                        <li><a href="./vervsval.html" class="nav-link">Verification Vs Validation</a></li>
+                        <li><a href="./testmeth.html" class="nav-link">Testing Methodologies</a></li>
+                        <li><a href="./staticvsdynamic.html" class="nav-link">Static Testing Vs Dynamic Testing</a></li>
+                        <li><a href="./qavsqc.html" class="nav-link">Quality Assurance and Quality Control</a></li>
+                        <li><a href="./verificationtech.html" class="nav-link">Verification/Static Testing Techniques</a></li>
+                        <li><a href="./levelsoftest.html" class="nav-link">Levels of Testing</a></li>
+                        <li><a href="./systemtesttech.html" class="nav-link">System Testing Techniques/Types</a></li>
+                        <li><a href="./funcvsnonfunc.html" class="nav-link">Functional Vs Non Functional Testing</a></li>
+                        <li><a href="./smokevssanity.html" class="nav-link">Smoke Testing Vs Sanity Testing</a></li>
+                        <li><a href="./retest.html" class="nav-link">Retesting</a></li>
+                        <li><a href="./regression.html" class="nav-link">Regression Testing</a></li>
+                        <li><a href="./retestvsregression.html" class="nav-link">Retesting Vs Regression Testing</a></li>
+                        <li><a href="./exploratory.html" class="nav-link">Exploratory Testing</a></li>
+                        <li><a href="./buddypairadhoc.html" class="nav-link">Buddy,Pair,Adhoc Testing</a></li>
+                        <li><a href="./monkey.html" class="nav-link">Monky/Gorilla Testing</a></li>
+                        <li><a href="./avsmvsex.html" class="nav-link">Adhoc Vs Monky Vs Exploratory Testing</a></li>
+                        <li><a href="./positivevsnegative.html" class="nav-link">Positive and Negative Testing</a></li>
+                        <li><a href="./testcasesforpen.html" class="nav-link">Positive and Negative Testcases for Pen</a></li>
+                        <li><a href="./endtoend.html" class="nav-link">End to End Testing</a></li>
+                        <li><a href="./globalandlocal.html" class="nav-link">Globalization and Localization Testing</a></li>
+                        <li><a href="./testdesigntechnques.html" class="nav-link">Test Design Techniques</a></li>
+                        <li><a href="./stlc.html" class="nav-link">STLC</a></li>
+                        <li><a href="./rtm.html" class="nav-link">Requirement Tracebility Matrix(RTM)</a></li>
+                        <li><a href="./testenv.html" class="nav-link">Test Environment</a></li>
+                        <li><a href="./testexe.html" class="nav-link">Test Execution</a></li>
+                        <li><a href="./defectsbugs.html" class="nav-link">Defects/Bugs</a></li>
+                        <li><a href="./defectcat.html" class="nav-link">Defects Catergorization</a></li>
+                        <li><a href="./highsevandlowsev.html" class="nav-link">High and low Severity, Priority defects</a></li>
+                        <li><a href="./defectresolution.html" class="nav-link">Defect Resolution</a></li>
+                        <li><a href="./buglifecycle.html" class="nav-link">Bug Life Cycle </a></li>
+                        <li><a href="./qaactivities.html" class="nav-link">QA/Testing Activities</a></li>
+                        <li><a href="./7principles.html" class="nav-link">7 Principles of Software Testing</a></li>
+                        <li><a href="./agilemodel.html" class="nav-link">Agile Model</a></li>
+                        <li><a href="./scrum.html" class="nav-link">Scrum</a></li>
+                        <li><a href="./scrumterminology.html" class="nav-link">Scrum Terminology</a></li>
+                        <li><a href="./scrumboard.html" class="nav-link">Scrum Board</a></li>
+                        <li><a href="./dordod.html" class="nav-link">DoR and DoD</a></li>
                     </ul>
                 </div>
                 
