--- a/manual.html
+++ b/manual.html
@@ -131,7 +131,7 @@
                         <li><a href="" class="nav-link active">Home</a></li> 
                         <li><a href="./manual/whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./manual/whattest.html" class="nav-link">What is Software testing?</a></li>
-                        <li><a href="./" class="nav-link">Necessity of Software Testing?</a></li>
+                        <li><a href="./manual/necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./" class="nav-link">Objectives/Motive of Software Testing</a></li>
                         <li><a href="./" class="nav-link">Software Quality</a></li>
                         <li><a href="./" class="nav-link">Project Vs Product</a></li>
