--- a/manual/necessity.html
+++ b/manual/necessity.html
@@ -47,7 +47,7 @@
                     <img src="../Images/bars.svg" alt=""> 
                 </div>
                 <div class="title">
-                    <h1>Manual Testing - What is Software Testing?</h1>
+                    <h1>Manual Testing -Necessity of Software Testing? </h1>
                 </div>
             </div>
            <div class="menu-two-parts">
@@ -105,14 +105,17 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>Necessity of Software Testing</h2>
-                    <p>1. Software Testing is the part of Software Development process..</p>
-                    <p>2. Software Testing is an activity to detecting the defects.</p>
-                    <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
-                    <p>4. To ensure the client about the completeness and correctness of the software application.</p>
+                    <h2>Necessity of Software Testing?</h2>
+                    <p>1.  To avoid risks (prevent).</p>
+                    <p>2. To identify errors (detect)</p>
+                    <p>3. To avoid extra costs.</p>
+                    <p>4. To gain customer confidence.</p>
+                    <p>5. To optimize business.</p>
+                    <p>6. To accelerate software development.</p>
+                    <p>7.  To check software adoptability</p>
                     <div class="arrows">
-                        <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./whattest.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./objectives.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
