--- a/manual/whattest.html
+++ b/manual/whattest.html
@@ -112,7 +112,7 @@
                     <p>4. To ensure the client about the completeness and correctness of the software application.</p>
                     <div class="arrows">
                         <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./necessity.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
